# dbus-exercise

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  Readme  configure  configure.in
src/App1/: Makefile.am  Makefile.in  receiver.c
src/App2/: Makefile.am  Makefile.in  sender_add.c
src/App3/: Makefile.am  Makefile.in  sender_remove.c
src/include/: queue.h
