#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(dbus-exercise, 1.0, BUG-REPORT-ADDRESS)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dbus-exercise, 1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT([Makefile
src/App1/Makefile
src/App2/Makefile
src/App3/Makefile
])
